--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.5.3
 
+  uuid: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
