--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.2
+version: 0.1.0
 
 environment:
   sdk: ^3.7.0
@@ -51,6 +51,9 @@ dependencies:
   # Environment variables
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.5.3
+
+  # App information
+  package_info_plus: ^8.3.0
 
   uuid: any
   provider: ^6.1.5
