--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # Fonts
+  google_fonts: ^6.1.0
+
+  # File sharing
+  share_plus: ^11.0.0
+
   # Supabase
   supabase_flutter: ^2.3.4
 
@@ -56,9 +62,13 @@ dependencies:
   package_info_plus: ^8.3.0
 
   # URL handling (for phone calls and emails)
-  url_launcher: ^6.2.5
+  url_launcher: ^6.3.1
 
   path_provider: ^2.1.2
+
+  # PDF generation and printing
+  pdf: ^3.10.6
+  printing: ^5.11.1
 
   uuid: ^4.5.1
   provider: ^6.1.5
@@ -87,7 +97,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
-  #   - assets/images/
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -116,3 +126,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+  fonts:
+    - family: OpenSans
+      fonts:
+        - asset: assets/fonts/OpenSans-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/OpenSans-Bold.ttf
+          weight: 700
