--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     
     <application
-        android:label="laser_magique_app"
+        android:label="Laser Magique"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
