--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: laser_magique_app
-description: "Mobile app to manager Laser-Magique"
+description: "Mobile app to manager Laser Magique"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -76,6 +76,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -134,3 +135,19 @@ flutter:
           weight: 400
         - asset: assets/fonts/OpenSans-Bold.ttf
           weight: 700
+
+# Configuration pour flutter_launcher_icons
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.jpeg"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/icon.jpeg"
+  windows:
+    generate: true
+    image_path: "assets/images/icon.jpeg"
+  macos:
+    generate: true
+    image_path: "assets/images/icon.jpeg"
