--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,15 +64,15 @@ dependencies:
   # URL handling (for phone calls and emails)
   url_launcher: ^6.3.1
 
-  path_provider: ^2.1.2
-
   # PDF generation and printing
-  pdf: ^3.10.6
+  pdf: ^3.10.7
   printing: ^5.11.1
+  path_provider: ^2.1.2
 
   uuid: ^4.5.1
   provider: ^6.1.5
   http: any
+  fl_chart: ^0.65.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
